--- a/.env
+++ b/.env
@@ -20,14 +20,14 @@ ZOOKEEPER_PATH = "/"
 #########################
 ##  @KAFKA
 #########################
-KAFKA_HOST: "127.0.0.1"
-KAFKA_PORT: 9092
+KAFKA_HOST= "127.0.0.1"
+KAFKA_PORT= 9092
 
 #########################
 ##  @arango
 #########################
-ARANGO_HOST: "127.0.0.1"
-ARANGO_PORT: 8529
-ARANGO_USERNAME: "root"
-ARANGO_PASSWORD: "root"
-ARANGO_DB_NAME: "Kafka"
+ARANGO_HOST= "127.0.0.1"
+ARANGO_PORT= 8529
+ARANGO_USERNAME= "root"
+ARANGO_PASSWORD= "root"
+ARANGO_DB_NAME= "Kafka"
